
- Issue #3845: In PyRun_SimpleFileExFlags avoid invalid memory access with
  short file names.

- Issue #1113244: Py_XINCREF, Py_DECREF, Py_XDECREF: Add `do { ... } while (0)'
  to avoid compiler warnings.

- Issue #5705: os.setuid() would not accept values > 2**31-1 but pwd.getpwnam()
  returned them on 64bit platforms.

Library
-------

- Issue #5095: Added bdist_msi to the list of bdist supported formats.
  Initial fix by Steven Bethard.

- Issue #1491431: Fixed distutils.filelist.glob_to_re for edge cases.
  Initial fix by Wayne Davison.

- Issue #5693: TestSuite.__iter__ can now be consistently overridden in subclasses.

- Issue #5694: removed spurious test output in Distutils (test_clean).

- Issue #5471: Fix os.path.expanduser() for $HOME set to '/'.

- Issue #1326077: fix the formatting of SyntaxErrors by the traceback module.

- Issue #1726172: fix IndexError in the case of and empty response in ftplib.

- Issue #2625: added missing iteritems() call to the for loop in
  mailbox.MH.get_message().

- Issue #5585: Add the ability to call an initializer to mulitiprocessing.manager
  so that users can install custonm handlers/etc.

- Issue #3551: Patch multiprocessing to raise a proper exception if the size of the
  object when writefile is called causes a ERROR_NO_SYSTEM_RESOURCES. Added docs
  to note the limitation

- unittest.assertNotEqual() now uses the inequality operator (!=) instead 
  of the equality operator.
  
- Issue #5663: better failure messages for unittest asserts. Default assertTrue
  and assertFalse messages are now useful. TestCase has a longMessage attribute.
  This defaults to False, but if set to True useful error messages are shown in
  addition to explicit messages passed to assert methods.
  
- Issue #3110: Add additional protect around SEM_VALUE_MAX for multiprocessing

- In Pdb, prevent the reassignment of __builtin__._ by sys.displayhook on
  printing out values.

- Issue #4572: added SEEK_* symbolic constants to io module.
